<resources>
    <string name="app_name">Pizza</string>
    <string name="pizzaText">Beef Cheese</string>
    <string name="cheeseText">Cheese</string>
    <string name="sausageText">Sausage</string>
    <string name="oliveText">Olive</string>
    <string name="pepperText">Pepper</string>
    <string name="deliveryDuration">20 min</string>
    <string name="deliveryText">Delivery</string>
    <string name="pizzaDescription">Meet lover, get ready to meet your pizza</string>
    <string name="priceText">5.98 $</string>
    <string name="buttonText">ADD TO CART</string>
</resources>